--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Crud websockets</title>
 </head>
 <body>
     <h1>CRUD Websockets</h1>
+
+    <script src="./main.js"></script>
 </body>
 </html>
