--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>CRUD Websockets</h1>
 
+    <script src="/socket.io/socket.io.min.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
