--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="main.css" />
     <title>Crud websockets</title>
-</head>
-<body>
-    <h1>CRUD Websockets</h1>
+  </head>
+  <body>
+    <div class="container h-100">
+      <div class="row h-100">
+        <div class="col-md-4 my-auto">
+          <form class="card card-body rounded-0" id="noteForm">
+            <h1 class="h3 mb-5">Add a Note</h1>
+
+            <input
+              type="text"
+              id="title"
+              name="title"
+              placeholder="Write a title"
+              class="form-control rounded-0 mb-3"
+              autofocus
+            />
+
+            <textarea name="description" id="description" rows="2" class="form-control rounded-0 mb-3" placeholder="Write a Description"></textarea>
+
+            <button class="btn btn-dark rounded-0">Send</button>
+          </form>
+        </div>
+        <div class="col-md-8">
+          notes
+          <div id="notes"></div>
+        </div>
+      </div>
+    </div>
 
     <script src="/socket.io/socket.io.min.js"></script>
     <script src="./main.js"></script>
-</body>
+  </body>
 </html>
