--- a/src/public/index.html
+++ b/src/public/index.html
@@ -42,6 +42,8 @@
     </div>
 
     <script src="/socket.io/socket.io.min.js"></script>
+    <script src="./ui.js"></script>
+    <script src="./sockets.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
