--- a/src/public/index.html
+++ b/src/public/index.html
@@ -34,7 +34,7 @@
             <button class="btn btn-dark rounded-0">Send</button>
           </form>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 py-3">
           <div id="notes"></div>
         </div>
       </div>
